Merga inte detta. Gammal filstruktur, endast för backup

--- a/assets/style.css
+++ b/assets/style.css
@@ -207,6 +207,11 @@ label {
   grid-template-columns: 1fr 1fr;
 }
 
+.grid--mini {
+  grid-template-columns: 1fr 1fr;
+  justify-items: left;
+}
+
 @media (min-width: 599px) {
   .grid--small {
     grid-template-columns: 1fr 1fr 1fr;
