--- a/assets/style.css
+++ b/assets/style.css
@@ -210,6 +210,11 @@ label {
   grid-template-columns: 1fr 1fr;
 }
 
+.grid--1x3--leftalign {
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: left;
+}
+
 @media (min-width: 599px) {
   .grid--small {
     grid-template-columns: 1fr 1fr 1fr;
