--- a/assets/style.css
+++ b/assets/style.css
@@ -215,19 +215,18 @@ label {
   grid-template-columns: 1fr 1fr;
 }
 
-.grid--1x3--leftalign {
-  grid-template-columns: 1fr 1fr 1fr;
-  justify-items: left;
-}
-.grid--1x3--missiontags {
-  grid-template-columns: 30px 30px 1fr;
-  justify-items: left;
-}
-
 @media (min-width: 599px) {
   .grid--small {
     grid-template-columns: 1fr 1fr 1fr;
   }
+}
+
+.grid--leftalign {
+  justify-items: left;
+}
+
+.grid--missiontags {
+  grid-template-columns: 30px 30px 1fr;
 }
 
 .button {
