feat: style edit link to appear to the right

--- a/assets/style.css
+++ b/assets/style.css
@@ -303,6 +303,8 @@ label {
 }
 
 .list-description dd {
+  display: flex;
+  justify-content: space-between;
   margin: 0;
   padding-left: 20px;
 }
