--- a/assets/style.css
+++ b/assets/style.css
@@ -211,6 +211,15 @@ label {
   grid-template-columns: 1fr 1fr;
 }
 
+.grid--1x3--leftalign {
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: left;
+}
+.grid--1x3--missiontags {
+  grid-template-columns: 30px 30px 1fr;
+  justify-items: left;
+}
+
 .grid--small {
   grid-template-columns: 1fr 1fr;
 }
