fix(characters): open popover on all characters

--- a/assets/style.css
+++ b/assets/style.css
@@ -337,7 +337,7 @@ legend {
 }
 
 .popover a:focus + .popover-panel,
-.popover a:hover + .popover-panel {
+.popover:hover > .popover-panel {
   display: grid;
 }
 
