--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@import url("https://unpkg.com/sanitize.css");
+@import url("sanitize.css");
 
 .colorfont {color: #33CC00; font-style: normal;}
 .title {color: #33CC00; font-style: normal; font-weight: bold;}
