fix(player): make sure players are editable without discord id, also only assign valid 17-18 digit values to discord id

--- a/assets/style.css
+++ b/assets/style.css
@@ -231,6 +231,10 @@ label:has(:disabled) {
 input {
   accent-color: var(--uscm-color-green);
 }
+input:invalid {
+  accent-color: red;
+  border-color: red;
+}
 
 legend {
   background-color:  var(--uscm-color-green);
